<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.costax</groupId>
    <artifactId>hibernate-tunings</artifactId>
    <version>1.1-SNAPSHOT</version>

    <name>JPA and Hibernate turning</name>
    <description>JPA and Hibernate Turning and Tips.</description>

    <developers>
        <developer>
            <id>costajlmpp</id>
            <name>Joao Costa</name>
            <email>costajlmpp@gmail.com</email>
            <url>https://costajlmpp.wordpress.com/</url>
            <timezone>0</timezone>
        </developer>
    </developers>

    <scm>
        <url>https://github.com/jlmc/hibernate-tunings</url>
        <connection>scm:git:git://github.com/jlmc/hibernate-tunings.git</connection>
        <developerConnection>scm:git:git@github.com:jlmc/hibernate-tunings.git</developerConnection>
    </scm>

    <modules>
        <module>utils</module>
        <module>database-migrations</module>
        <module>helpers</module>
        <module>hibernate-tuning-howtos</module>
        <module>logging-sql-statements</module>
        <!--module>schema-management</module-->
        <module>connection-manager</module>
        <module>connection-lifecycle</module>
        <module>types</module>
        <module>Identifiers</module>
        <module>advanced-topics</module>
        <module>bytecode-enhancement-dirty-checking</module>
        <module>caches</module>
        <module>cache2ndee</module>
        <module>bulk-operations</module>
        <module>batching-of-write-operations</module>
        <module>concurrency</module>
        <module>fetching</module>
        <module>relationships</module>
        <module>bean-validation</module>
        <module>mapping-blobs-and-clobs</module>
        <module>instrumentation</module>
        <module>advanced-topics-two</module>
        <module>hibernate-5-naming-strategies</module>
        <module>xa-transactions-2-phase-commit</module>
        <module>how-to-use-a-sequence-generator-for-a-non-id-field</module>
        <module>the-best-way-to-use-java-records-with-jpa</module>
        <module>how-bootstrap-jpa-programmatically</module>
    </modules>
    <packaging>pom</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <java.version>17</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>

        <failOnMissingWebXml>false</failOnMissingWebXml>

        <!-- dependencies versions-->
        <hibernate.version>6.0.1.Final</hibernate.version>
        <!--hibernate.version>5.4.17.Final</hibernate.version-->
        <!--<hibernate.version>5.4.16.Final</hibernate.version>-->
        <!--hibernate.version>5.4.14.Final</hibernate.version-->
        <!--hibernate.version>5.4.12.Final</hibernate.version-->
        <!--hibernate.version>5.4.4.Final</hibernate.version-->
        <!--hibernate.version>5.4.2.Final</hibernate.version-->
        <!--hibernate.version>5.4.0.Final</hibernate.version-->
        <!--hibernate.version>5.3.6.Final</hibernate.version-->
        <!--hibernate.version>5.2.17.Final</hibernate.version-->
        <hibernate-validator.version>7.0.4.Final</hibernate-validator.version>
        <!--hibernate-validator.version>6.1.5.Final</hibernate-validator.version-->
        <!--hibernate-validator.version>6.1.3.Final</hibernate-validator.version-->
        <!--hibernate-validator.version>6.1.2.Final</hibernate-validator.version-->
        <!--hibernate-validator.version>6.1.0.Final</hibernate-validator.version-->
        <postgresql.version>42.3.5</postgresql.version>
        <!--postgresql.version>42.2.1</postgresql.version-->
        <!--postgresql.version>9.4.1208</postgresql.version-->
        <!--oracle.version>12.2.0.1</oracle.version-->
        <!--<oracle.version>11.2.0.4</oracle.version>-->
        <!--mysql.version>6.0.6</mysql.version-->
        <!--mariadb.version>2.2.3</mariadb.version-->
        <!--mssql.version>6.4.0.jre8</mssql.version-->
        <jtds.version>1.3.1</jtds.version>
        <slf4j.version>1.7.36</slf4j.version>
        <!--slf4j.version>1.7.7</slf4j.version-->
        <hikari.version>1.3.3</hikari.version>
        <spring.version>4.3.3.RELEASE</spring.version>
        <!--jackson.version>2.7.4</jackson.version-->
        <jackson.version>2.13.4.2</jackson.version>
        <!--jackson.version>2.11.0</jackson.version -->
        <!--jackson.version>2.9.10.4</jackson.version-->
        <flyway.version>6.4.3</flyway.version>
        <!--flyway.version>5.2.4</flyway.version-->
        <!--flyway.version>3.2.1</flyway.version-->
        <aspectj.version>1.8.7</aspectj.version>
        <h2.version>2.1.212</h2.version>
        <!--<h2.version>1.4.200</h2.version>-->
        <hsqldb.version>2.4.0</hsqldb.version>

        <junit5.version>5.6.2</junit5.version>
        <lombok.version>1.18.24</lombok.version>
        <!--lombok.version>1.18.12</lombok.version-->

        <hibernate-types-60.version>2.9.9</hibernate-types-60.version>
        <surefire-failsafe.version>3.0.0-M4</surefire-failsafe.version>
        <jakarta.persistence-api.version>3.0.0</jakarta.persistence-api.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.github.jlmc</groupId>
                <artifactId>jpa-junit5-extension</artifactId>
                <version>2.0.0-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>5.8.2</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-bom</artifactId>
                <version>2.17.2</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>

            <!-- JSON-P 1.1 API -->
            <dependency>
                <groupId>jakarta.json</groupId>
                <artifactId>jakarta.json-api</artifactId>
                <version>2.1.0</version>
            </dependency>
            <dependency>
                <groupId>org.glassfish</groupId>
                <artifactId>jakarta.json</artifactId>
                <version>2.0.1</version>
            </dependency>
            <!-- JSON-B 1.0 API -->
            <dependency>
                <groupId>jakarta.json.bind</groupId>
                <artifactId>jakarta.json.bind-api</artifactId>
                <version>3.0.0</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse</groupId>
                <artifactId>yasson</artifactId>
                <version>2.0.4</version>
            </dependency>

            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-core</artifactId>
                <version>${hibernate.version}</version>
            </dependency>
            <!--Generates the jpa Metadata Model, very useful in building and maintaining and JPA Criteria Queries-->
            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-jpamodelgen</artifactId>
                <version>${hibernate.version}</version>
            </dependency>
            <dependency>
                <groupId>org.hibernate.orm</groupId>
                <artifactId>hibernate-jpamodelgen</artifactId>
                <version>${hibernate.version}</version>
            </dependency>
            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-testing</artifactId>
                <version>${hibernate.version}</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-c3p0</artifactId>
                <version>${hibernate.version}</version>
            </dependency>
            <dependency>
                <groupId>org.hibernate.validator</groupId>
                <artifactId>hibernate-validator</artifactId>
                <version>${hibernate-validator.version}</version>
            </dependency>
            <dependency>
                <groupId>jakarta.el</groupId>
                <artifactId>jakarta.el-api</artifactId>
                <version>5.0.0</version>
            </dependency>
            <dependency>
                <groupId>org.glassfish</groupId>
                <artifactId>jakarta.el</artifactId>
                <version>5.0.0-M1</version>
            </dependency>
            <dependency>
                <groupId>jakarta.xml.bind</groupId>
                <artifactId>jakarta.xml.bind-api</artifactId>
                <version>4.0.0</version>
            </dependency>
            <dependency>
                <groupId>org.glassfish.jaxb</groupId>
                <artifactId>jaxb-runtime</artifactId>
                <version>4.0.0-M4</version>
            </dependency>
            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-hikaricp</artifactId>
                <version>${hibernate.version}</version>
            </dependency>
            <dependency>
                <groupId>com.vladmihalcea</groupId>
                <artifactId>hibernate-types-60</artifactId>
                <version>2.16.2</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version> <!-- TODO Upgrade -->
                <scope>provided</scope>
                <optional>true</optional>
            </dependency>
            <dependency>
                <groupId>org.flywaydb</groupId>
                <artifactId>flyway-core</artifactId>
                <version>${flyway.version}</version>
            </dependency>
            <dependency>
                <groupId>org.flywaydb</groupId>
                <artifactId>flyway-maven-plugin</artifactId>
                <version>${flyway.version}</version>
            </dependency>
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>${postgresql.version}</version>
            </dependency>
            <dependency>
                <groupId>com.h2database</groupId>
                <artifactId>h2</artifactId>
                <version>${h2.version}</version>
            </dependency>
            <dependency>
                <groupId>org.hsqldb</groupId>
                <artifactId>hsqldb</artifactId>
                <version>${hsqldb.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.zaxxer</groupId>
                <artifactId>HikariCP</artifactId>
                <version>2.6.1</version>
            </dependency>
            <dependency>
                <groupId>p6spy</groupId>
                <artifactId>p6spy</artifactId>
                <version>3.0.0</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>3.16.1</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>io.costax</groupId>
                <artifactId>helpers</artifactId>
                <version>${project.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>io.costax</groupId>
                <artifactId>utils</artifactId>
                <version>${project.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <release>${java.version}</release>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <encoding>UTF-8</encoding>
                        <compilerArgs>--enable-preview</compilerArgs>
                        <!--
                        <annotationProcessorPaths>
                            Hibernate - Metamodel Generator:
                            https://docs.jboss.org/hibernate/orm/5.4/topical/html_single/metamodelgen/MetamodelGenerator.html
                            <path>
                                <groupId>org.hibernate</groupId>
                                <artifactId>hibernate-jpamodelgen</artifactId>
                                <version>${hibernate.version}</version>
                            </path>
                        </annotationProcessorPaths>
                        -->
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${surefire-failsafe.version}</version>
                    <configuration>
                        <argLine>--enable-preview</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${surefire-failsafe.version}</version>
                    <configuration>
                        <argLine>--enable-preview</argLine>
                    </configuration>
                </plugin>

                <plugin>
                    <!-- Hibernate Bytecode Enhancement:
                    https://docs.jboss.org/hibernate/orm/5.0/topical/html/bytecode/BytecodeEnhancement.html -->
                    <groupId>org.hibernate.orm.tooling</groupId>
                    <artifactId>hibernate-enhance-maven-plugin</artifactId>
                    <version>${hibernate.version}</version>
                    <!--
                    <executions>
                        <execution>
                            <configuration>
                                <failOnError>true</failOnError>
                                <enableLazyInitialization>true</enableLazyInitialization>
                                <enableDirtyTracking>true</enableDirtyTracking>
                                <enableAssociationManagement>true</enableAssociationManagement>
                                <enableExtendedEnhancement>false</enableExtendedEnhancement>
                            </configuration>
                            <goals>
                                <goal>enhance</goal>
                            </goals>
                        </execution>
                    </executions>
                    -->
                </plugin>
                <plugin>
                    <groupId>org.flywaydb</groupId>
                    <artifactId>flyway-maven-plugin</artifactId>
                    <version>${flyway.version}</version>
                    <configuration>
                        <placeholders>
                            <tunning_server_port>5432</tunning_server_port>
                        </placeholders>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>${java.version}</release>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>UTF-8</encoding>
                    <compilerArgs>--enable-preview</compilerArgs>
                    <!--
                     <compilerArguments>
                        <AaddGeneratedAnnotation>false</AaddGeneratedAnnotation>
                        <Adebug>true</Adebug>
                    </compilerArguments>
                    <annotationProcessorPaths>
                        Hibernate - Metamodel Generator:
                        https://docs.jboss.org/hibernate/orm/5.4/topical/html_single/metamodelgen/MetamodelGenerator.html
                        <path>
                            <groupId>org.hibernate</groupId>
                            <artifactId>hibernate-jpamodelgen</artifactId>
                            <version>${hibernate.version}</version>
                        </path>
                    </annotationProcessorPaths>
                    -->
                </configuration>
            </plugin>
            <!--
              Test configurations
             -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>--enable-preview</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <configuration>
                    <argLine>--enable-preview</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
